[tool.poetry]
name = "gaii"
version = "0.1.0"
description = ""
authors = ["ysasano <state.and.strategy@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
tqdm = "^4.62.3"
networkx = "^2.6.3"
torch = "^1.9.1"
statsmodels = "^0.13.0"
pandas = "^1.3.3"
fire = "^0.4.0"
traitlets = "^5.1.0"
jupyter = "^1.0.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
